Inmob-Salesforce/force-app/main/default/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_if_Unable_to_Sign_off_for_ZD__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_if_Unable_to_Sign_off_for_ZD__c</fullName>
    <inlineHelpText>By signing Off Teams are confirming:
Work for Pre, Post, Retired scripts are done.   
Identified Features to be enabled with Retired Scripts
Completed all action items assigned to them by ZD Team</inlineHelpText>
    <label>Explain if Unable to Sign off for ZD</label>
    <type>TextArea</type>
</CustomField>