Inmob-Salesforce/force-app/main/default/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Swimlane_Solutions_Built_Utilized__c.field-meta.xml
<CustomField>
    <fullName>agf__Swimlane_Solutions_Built_Utilized__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>All 4 swimlanes for the solution are built and utilized (dev, test, stage, prod).  

Dev/Test must be part of Sprint.  Stage must be used for UAT.</inlineHelpText>
    <label>Swimlane Solutions Built &amp; Utilized</label>
    <type>Checkbox</type>
</CustomField>